--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,6 @@
 }
 
 .header::before{
-    z-index: 0;
     content: "";
     position: absolute;
     width: 100%;
@@ -16,7 +15,6 @@
 }
 
 .text-logo{
-    z-index: 1;
     position: absolute;
     top: 40%;
     left: 50%;
@@ -29,9 +27,21 @@
     text-transform: uppercase;
     letter-spacing: 0.2rem;
     font-size: 0.8rem;
-    z-index: 1;
     position: absolute;
     top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.footer{
+    color: rgba(255, 255, 255, 0.89);
+    letter-spacing: 0.2rem;
+    font-size: 8px;
+    opacity: 0.75;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    position: absolute;
+    top: 95%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
