--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -24,8 +24,20 @@
     filter: brightness(50%);
 }
 
+.header-inner-text{
+    position: relative;
+    height: 30%;
+    width: 50%;
+    border-bottom: solid 0.5px white;
+    border-top: solid 0.5px white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
+}
+
 .header-text-logo{
-    top: 40%;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -37,7 +49,7 @@
     text-transform: uppercase;
     letter-spacing: 0.2rem;
     font-size: 0.8rem;
-    top: 50%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
