--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,12 +1,4 @@
-.icon{
-    content: url('../../assets/images/eye_of_ender.png');
-    position: absolute;
-    height: 70px;
-    width: 70px;
-    top: 20%;
-    left: 49%;
-    transform: translate(-50%, -50%);
-}
+/*header*/
 
 .header{
     position: relative;
@@ -24,9 +16,30 @@
     filter: brightness(50%);
 }
 
-.header-inner-text{
+@keyframes icon-rise{
+    0%{top: calc(50% - 110px);}
+    100%{top: 20%;}
+}
+
+.header-icon{
+    content: url('../../assets/images/eye_of_ender.png');
+    position: absolute;
+    height: 70px;
+    width: 70px;
+    top: calc(50% - 110px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: icon-rise 0.75s ease 0.25s forwards;
+}
+
+@keyframes header-expand{
+    0%{height: 0;}
+    100%{height: 30%;}
+}
+
+.header-inner{
     position: relative;
-    height: 30%;
+    animation: header-expand 0.75s ease 0.25s forwards;
     width: 50%;
     border-bottom: solid 0.5px white;
     border-top: solid 0.5px white;
@@ -36,13 +49,34 @@
     white-space: nowrap;
 }
 
-.header-text-logo{
+.header-inner::before{
+    content: '';
+    display: block;
+    position: absolute;
+    top: -55px;
+    left: calc(50% - 1px);
+    width: 1px;
+    height: 55px;
+    background: #ffffff;
+}
+
+@keyframes opacity{
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+}
+
+.header-logo, .header-paragraph{
+    opacity: 0;
+    animation: opacity 0.325s ease-in-out 0.25s forwards
+}
+
+.header-logo{
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.header-text{
+.header-paragraph{
     color: rgba(255, 255, 255, 0.89);
     position: absolute;
     font-family: 'Source Sans Pro', sans-serif;
@@ -54,6 +88,7 @@
     transform: translate(-50%, -50%);
 }
 
+/*footer*/
 .footer{
     color: rgba(255, 255, 255, 0.89);
     position: absolute;
