--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,7 +13,7 @@
     height: 100vh;
     background-image:  url('../../assets/images/hole_1.png');
     background-size: auto;
-    filter: brightness(50%);
+    filter: brightness(70%);
 }
 
 @keyframes icon-rise{
@@ -50,23 +50,34 @@
     white-space: nowrap;
 }
 
-.header-inner::before{
-    content: '';
-    display: block;
-    position: absolute;
-    top: -55px;
-    left: calc(50% - 1px);
-    width: 1px;
-    height: 55px;
-    background: white;
-}
-
 @keyframes opacity{
     0%{opacity: 0;}
     100%{opacity: 1;}
 }
 
-.header-logo, .header-paragraph{
+.header-inner::before{
+    content: '';
+    display: block;
+    position: absolute;
+    top: -52px;
+    left: calc(50% - 1px);
+    width: 1px;
+    height: 45px;
+    background: white;
+}
+
+.header-inner::after{
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -60px;
+    left: calc(50% - 1px);
+    width: 1px;
+    height: 50px;
+    background: white;
+}
+
+.header-logo, .header-paragraph, .header-inner::before, .header-inner::after{
     opacity: 0;
     animation: opacity 0.325s ease-in-out 0.25s forwards
 }
@@ -87,6 +98,51 @@
     top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+/*buttons*/
+@keyframes button-fall{
+    100%{top: 80%;}
+}
+
+.buttons{
+    position: absolute;
+    width: 100%;
+    top: 60%;
+    left: 50%;  
+    transform: translate(-50%, -50%);
+    text-align: center;
+    animation: button-fall 0.75s ease 0.25s forwards;
+}
+
+.art-button{
+    color: rgba(255, 255, 255, 0.89);
+    background-color: transparent;  
+    margin: 10px;
+    width: 10%;
+    height: 45px;
+    text-align: center;
+    line-height: 45px;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    font-size: 13px;
+    font-family: 'Source Sans Pro', sans-serif;
+    border: solid 1px #ffffff;
+    border-radius: 4px;
+    box-sizing: border-box;
+    transition: background-color 0.15s ease-in-out;
+}
+
+.art-button:hover{
+    background-color: rgba(255, 255, 255, 0.1)
+}
+
+.art-button:focus{
+    outline: 0;
+}
+
+.art-button:active{
+    background-color: rgba(255, 255, 255, 0.2)
 }
 
 /*footer*/
