--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,18 +1,22 @@
+.wrapper{
+    position: relative;
+}
+
+.wrapper::before{
+    content: "";
+    width: 100%;
+    height: 100vh;
+    background-image:  url('../../assets/images/hole_1.png');
+    background-size: auto;
+    position: fixed;
+    filter: brightness(70%);
+}
+
 /*header*/
 .header{
     position: relative;
     width: 100%;
     height: 100vh;
-}
-
-.header::before{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    background-image:  url('../../assets/images/hole_1.png');
-    background-size: auto;
-    filter: brightness(70%);
 }
 
 @keyframes icon-rise{
@@ -166,4 +170,68 @@
 
 .article-visible{
     animation: article-visible 0.75s ease forwards;
+}
+
+@keyframes article-delay{
+    0%{}
+    100%{opacity: 1;}
+}
+
+.article-delay{
+    animation: article-delay 0.325s ease-in-out forwards;
+    animation-delay: 0.30s;
+}
+
+.articles{
+    display: none;
+    opacity: 0;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(27, 31, 34, 0.85);
+    padding: 38px;
+    border-radius: 6px;
+    width: 42%;
+    margin: 40px 0;
+}
+
+.articles h2{ 
+    position: absolute;
+    text-transform: uppercase;
+}
+
+.articles h2::before{
+    position: absolute;
+    height: 0.5px;
+    margin: 0 auto;
+    content: '';
+    right: 2%;
+    left: 0;
+    width: 96%;
+    background-color: white;
+    bottom: -4px; /* adjust this to move up and down. you may have to adjust the line height of the paragraph if you move it down a lot. */
+}
+
+.article{
+    display: none;
+    opacity: 0;
+    color: rgba(255, 255, 255, 0.89);
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
+    font-size: 15px;
+    white-space: pre-line;
+    line-height: 150%;
+}
+
+span{
+    display: block;
+}
+
+img{
+    padding: 40px 0 0 0;
+    display: block;
+    margin: 0 auto;
+    height: 250px;
+    width: 560px;
 }
