--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,26 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro|Montserrat|Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro|Montserrat|Roboto:300,400&display=swap');
 
 *{
     padding: 0;
     margin: 0;
 }
 
-h1{
+h1, h2{
     color: rgba(255, 255, 255, 0.89);
     font-family: 'Source Sans Pro', sans-serif;
+}
+
+h1{ 
     font-size: 2.25rem;
     line-height: 1.3;
     letter-spacing: 0.5rem; 
     position: absolute;
+}
+
+h2{
+    color: rgba(255, 255, 255, 0.89);
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 28px;
+    line-height: 1.3;
+    letter-spacing: 0.5rem;
 }
