--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -53,7 +53,7 @@
     white-space: nowrap;
 }
 
-@keyframes opacity{
+@keyframes start-fade-in{
     0%{opacity: 0;}
     100%{opacity: 1;}
 }
@@ -82,7 +82,7 @@
 
 .header-logo, .header-paragraph, .header-inner::before, .header-inner::after{
     opacity: 0;
-    animation: opacity 0.325s ease-in-out 0.25s forwards
+    animation: start-fade-in 0.325s ease-in-out 0.25s forwards
 }
 
 .header-logo{
@@ -163,65 +163,103 @@
     transform: translate(-50%, -50%);
 }
 
-@keyframes article-visible{
+/*articles*/
+@keyframes article-is-visible{
     0%{}
     100%{opacity: 0;}
 }
 
-.article-visible{
-    animation: article-visible 0.75s ease forwards;
+.article-is-visible{
+    animation: article-is-visible 0.75s ease forwards;
 }
 
-@keyframes article-delay{
-    0%{}
+@keyframes article-fade-in{
+    0%{opacity: 0;}
     100%{opacity: 1;}
 }
 
-.article-delay{
-    animation: article-delay 0.325s ease-in-out forwards;
+.article-fade-in{
+    animation: article-fade-in 0.325s ease-in-out forwards;
     animation-delay: 0.30s;
+}
+
+@keyframes article-not-visible{
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+}
+
+.article-not-visible{
+    animation: article-not-visible 0.325s ease-in-out forwards;
+    animation-delay: 0.400s;
+}
+
+@keyframes article-fade-out{
+    0%{opacity: 1;}
+    100%{opacity: 0;}
+}
+
+.article-fade-out{
+    opacity: 1;
+    animation: article-fade-out 0.325s ease-in-out forwards;
 }
 
 .articles{
     display: none;
+    position: relative;
+    flex-direction: column;
     opacity: 0;
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(27, 31, 34, 0.85);
-    padding: 38px;
-    border-radius: 6px;
-    width: 42%;
-    margin: 40px 0;
+    align-items: center;
+    justify-content: center;
 }
 
-.articles h2{ 
+.article h2{ 
     position: absolute;
     text-transform: uppercase;
+    display: block;
 }
 
-.articles h2::before{
+.article h2::before{
     position: absolute;
-    height: 0.5px;
+    height: 1px;
     margin: 0 auto;
     content: '';
     right: 2%;
     left: 0;
-    width: 96%;
+    width: 98%;
     background-color: white;
     bottom: -4px; /* adjust this to move up and down. you may have to adjust the line height of the paragraph if you move it down a lot. */
 }
 
 .article{
+    /*display: none;
+    position: relative;
+    background-color: rgba(27, 31, 34, 0.85);
+    padding: 38px;
+    border-radius: 6px;
+    width: 42%;
+    margin: 40px auto;*/
+    
     display: none;
-    opacity: 0;
+    position: relative;
+    width: 42%;
+    padding: 24px 38px 38px 38px;
+    margin: 40px 0;
     color: rgba(255, 255, 255, 0.89);
+    background-color: rgba(27, 31, 34, 0.85);
     font-family: 'Roboto', sans-serif;
     font-weight: lighter;
     font-size: 15px;
     white-space: pre-line;
     line-height: 150%;
+    border-radius: 6px;
+}
+
+.close{
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    top: 0;
+    right: 0;
 }
 
 span{
@@ -229,9 +267,8 @@ span{
 }
 
 img{
-    padding: 40px 0 0 0;
     display: block;
-    margin: 0 auto;
+    margin: 20px auto;
     height: 250px;
     width: 560px;
 }
